WIP Страницы "гарантия" и "корп клиентам"

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,5 @@
 //@import "components/components";
 //@import "modules/modules";
 //@import "adaptive/adaptive";
+
+@import '../blocks/modules/corporate/corporate';
