--- a/src/styles/modules.scss
+++ b/src/styles/modules.scss
@@ -59,6 +59,7 @@
 @import '../blocks/modules/configurator-save/configurator-save';
 @import '../blocks/modules/contacts/contacts';
 @import '../blocks/modules/copyright/copyright';
+@import '../blocks/modules/corporate/corporate';
 @import '../blocks/modules/datepicker/datepicker';
 @import '../blocks/modules/date-select/date-select';
 @import '../blocks/modules/def-list/def-list';
