--- a/src/views/helpers/modules.pug
+++ b/src/views/helpers/modules.pug
@@ -52,6 +52,7 @@ include ../../blocks/modules/configurator-product/configurator-product
 include ../../blocks/modules/configurator-save/configurator-save
 include ../../blocks/modules/contacts/contacts
 include ../../blocks/modules/copyright/copyright
+include ../../blocks/modules/corporate/corporate
 include ../../blocks/modules/datepicker/datepicker
 include ../../blocks/modules/date-select/date-select
 include ../../blocks/modules/def-list/def-list
